--- a/xfce-extra/thunar-media-tags/ChangeLog
+++ b/xfce-extra/thunar-media-tags/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for xfce-extra/thunar-media-tags
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-extra/thunar-media-tags/ChangeLog,v 1.14 2007/05/18 18:28:45 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-extra/thunar-media-tags/ChangeLog,v 1.15 2007/05/21 18:01:04 jer Exp $
+
+  21 May 2007; Jeroen Roovers <jer@gentoo.org>
+  thunar-media-tags-0.1.2.ebuild:
+  Stable for HPPA (bug #178510).
 
   18 May 2007; Raúl Porcel <armin76@gentoo.org>
   thunar-media-tags-0.1.2.ebuild:
