--- a/xfce-extra/xfce4-appfinder/ChangeLog
+++ b/xfce-extra/xfce4-appfinder/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for xfce-extra/xfce4-appfinder
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-appfinder/ChangeLog,v 1.55 2007/05/19 15:01:12 welp Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-appfinder/ChangeLog,v 1.56 2007/05/21 17:53:45 jer Exp $
+
+  21 May 2007; Jeroen Roovers <jer@gentoo.org> xfce4-appfinder-4.4.1.ebuild:
+  Stable for HPPA (bug #178510).
 
   19 May 2007; Peter Weller <welp@gentoo.org> xfce4-appfinder-4.4.1.ebuild:
   Stable on amd64 wrt bug 178510
