--- a/xfce-extra/xfce4-icon-theme/ChangeLog
+++ b/xfce-extra/xfce4-icon-theme/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for xfce-extra/xfce4-icon-theme
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-icon-theme/ChangeLog,v 1.53 2007/05/19 15:08:44 welp Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-icon-theme/ChangeLog,v 1.54 2007/05/21 17:52:35 jer Exp $
+
+  21 May 2007; Jeroen Roovers <jer@gentoo.org>
+  xfce4-icon-theme-4.4.1.ebuild:
+  Stable for HPPA (bug #178510).
 
   19 May 2007; Peter Weller <welp@gentoo.org> xfce4-icon-theme-4.4.1.ebuild:
   Stable on amd64 wrt bug 178510
