--- a/xfce-extra/xfce4-mount/ChangeLog
+++ b/xfce-extra/xfce4-mount/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for xfce-extra/xfce4-mount
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-mount/ChangeLog,v 1.29 2007/05/19 15:15:11 welp Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-mount/ChangeLog,v 1.30 2007/05/21 18:05:29 jer Exp $
+
+  21 May 2007; Jeroen Roovers <jer@gentoo.org> xfce4-mount-0.5.1.ebuild:
+  Stable for HPPA (bug #178510).
 
   19 May 2007; Peter Weller <welp@gentoo.org> xfce4-mount-0.5.1.ebuild:
   Stable on amd64 wrt bug 178510
