--- a/xfce-extra/xfwm4-themes/ChangeLog
+++ b/xfce-extra/xfwm4-themes/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for xfce-extra/xfwm4-themes
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfwm4-themes/ChangeLog,v 1.84 2007/05/19 15:20:28 welp Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfwm4-themes/ChangeLog,v 1.85 2007/05/21 17:56:36 jer Exp $
+
+  21 May 2007; Jeroen Roovers <jer@gentoo.org> xfwm4-themes-4.4.1.ebuild:
+  Stable for HPPA (bug #178510).
 
   19 May 2007; Peter Weller <welp@gentoo.org> xfwm4-themes-4.4.1.ebuild:
   Stable on amd64 wrt bug 178510
