--- a/xfce-base/xfce4-extras/ChangeLog
+++ b/xfce-base/xfce4-extras/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for xfce-base/xfce4-extras
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-base/xfce4-extras/ChangeLog,v 1.61 2007/05/19 15:22:58 welp Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-base/xfce4-extras/ChangeLog,v 1.62 2007/05/21 18:42:55 jer Exp $
+
+  21 May 2007; Jeroen Roovers <jer@gentoo.org> xfce4-extras-4.4.1.ebuild:
+  Stable for HPPA (bug #178510).
 
   19 May 2007; Peter Weller <welp@gentoo.org> xfce4-extras-4.4.1.ebuild:
   Stable on amd64 wrt bug 178510
