--- a/sys-apps/discover/ChangeLog
+++ b/sys-apps/discover/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-apps/discover
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/discover/ChangeLog,v 1.16 2007/01/13 13:41:30 nixnut Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/discover/ChangeLog,v 1.17 2007/05/21 21:34:42 armin76 Exp $
+
+  21 May 2007; Raúl Porcel <armin76@gentoo.org> discover-2.0.7.ebuild:
+  alpha stable wrt #153612
 
   13 Jan 2007; nixnut <nixnut@gentoo.org> discover-2.0.7.ebuild:
   Stable on ppc wrt bug 153612
