--- a/net-wireless/fwlanusb/ChangeLog
+++ b/net-wireless/fwlanusb/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-wireless/fwlanusb
-# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-wireless/fwlanusb/ChangeLog,v 1.5 2006/12/10 23:36:55 sbriesen Exp $
+# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-wireless/fwlanusb/ChangeLog,v 1.6 2007/05/21 21:54:05 sbriesen Exp $
+
+*fwlanusb-1.00.00_rc1 (21 May 2007)
+
+  21 May 2007; Stefan Briesenick <sbriesen@gentoo.org>
+  +fwlanusb-1.00.00_rc1.ebuild:
+  version bump, but masked due to crashes on recent kernels; solving bug #175304.
 
 *fwlanusb-0.09.00_beta-r2 (10 Dec 2006)
 
