--- a/net-firewall/conntrack/ChangeLog
+++ b/net-firewall/conntrack/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-firewall/conntrack
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-firewall/conntrack/ChangeLog,v 1.3 2007/05/16 06:27:39 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-firewall/conntrack/ChangeLog,v 1.4 2007/05/21 22:48:45 gustavoz Exp $
+
+  21 May 2007; Gustavo Zacarias <gustavoz@gentoo.org>
+  conntrack-1.00_beta2.ebuild:
+  Keyworded ~sparc
 
   16 May 2007; Jeroen Roovers <jer@gentoo.org> conntrack-1.00_beta2.ebuild:
   Marked ~hppa too.
