--- a/media-fonts/liberation-fonts-ttf/ChangeLog
+++ b/media-fonts/liberation-fonts-ttf/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-fonts/liberation-fonts-ttf
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-fonts/liberation-fonts-ttf/ChangeLog,v 1.1 2007/05/22 01:17:02 je_fro Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-fonts/liberation-fonts-ttf/ChangeLog,v 1.2 2007/05/22 05:12:56 tove Exp $
+
+  22 May 2007; Torsten Veller <tove@gentoo.org>
+  liberation-fonts-ttf-2.ebuild:
+  Keyworded ~x86
 
 *liberation-fonts-ttf-2 (22 May 2007)
 
