--- a/dev-util/dialogblocks/ChangeLog
+++ b/dev-util/dialogblocks/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-util/dialogblocks
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/dialogblocks/ChangeLog,v 1.5 2007/04/15 13:43:57 mrness Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/dialogblocks/ChangeLog,v 1.6 2007/05/22 09:16:51 mrness Exp $
+
+*dialogblocks-4.08 (22 May 2007)
+
+  22 May 2007; Alin Năstac <mrness@gentoo.org> -dialogblocks-3.13.ebuild,
+  -dialogblocks-3.17.ebuild, +dialogblocks-4.08.ebuild:
+  Version bump.
 
 *dialogblocks-3.19 (15 Apr 2007)
 
