--- a/media-libs/libkdcraw/ChangeLog
+++ b/media-libs/libkdcraw/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-libs/libkdcraw
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libkdcraw/ChangeLog,v 1.1 2007/05/22 10:22:32 pva Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libkdcraw/ChangeLog,v 1.2 2007/05/22 15:35:25 gustavoz Exp $
+
+  22 May 2007; Gustavo Zacarias <gustavoz@gentoo.org>
+  libkdcraw-0.1.0.ebuild:
+  Keyworded ~sparc wrt #179410
 
 *libkdcraw-0.1.0 (22 May 2007)
 
