--- a/xfce-base/xfce4-extras/ChangeLog
+++ b/xfce-base/xfce4-extras/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for xfce-base/xfce4-extras
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-base/xfce4-extras/ChangeLog,v 1.62 2007/05/21 18:42:55 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-base/xfce4-extras/ChangeLog,v 1.63 2007/05/22 15:43:10 armin76 Exp $
+
+  22 May 2007; Raúl Porcel <armin76@gentoo.org> xfce4-extras-4.4.1.ebuild:
+  Add ~alpha wrt #175749
 
   21 May 2007; Jeroen Roovers <jer@gentoo.org> xfce4-extras-4.4.1.ebuild:
   Stable for HPPA (bug #178510).
