--- a/sys-libs/libvserver/ChangeLog
+++ b/sys-libs/libvserver/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for sys-libs/libvserver
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/libvserver/ChangeLog,v 1.10 2007/02/09 06:08:30 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/libvserver/ChangeLog,v 1.11 2007/05/22 16:22:07 phreak Exp $
+
+  22 May 2007; Christian Heim <phreak@gentoo.org> libvserver-1.0.ebuild,
+  libvserver-1.0.1.ebuild, libvserver-1.0.2.ebuild:
+  Fixing the HOMEPAGE, as Hollow forgot to change it when moving the svn-repo
+  to linux-vserver.org (thanks to jer in #179436).
 
   09 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
   Regenerate digest in Manifest2 format.
