--- a/xfce-extra/xfce4-places/ChangeLog
+++ b/xfce-extra/xfce4-places/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for xfce-extra/xfce4-places
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-places/ChangeLog,v 1.14 2007/05/21 18:36:43 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-places/ChangeLog,v 1.15 2007/05/22 17:05:04 drac Exp $
+
+*xfce4-places-0.3.0 (22 May 2007)
+
+  22 May 2007; Samuli Suominen <drac@gentoo.org> +xfce4-places-0.3.0.ebuild:
+  Version bump.
 
   21 May 2007; Jeroen Roovers <jer@gentoo.org> xfce4-places-0.2.0.ebuild:
   Stable for HPPA (bug #178510).
