--- a/net-firewall/ipp2p/ChangeLog
+++ b/net-firewall/ipp2p/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-firewall/ipp2p
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-firewall/ipp2p/ChangeLog,v 1.27 2007/03/10 11:11:19 mrness Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-firewall/ipp2p/ChangeLog,v 1.28 2007/05/22 17:30:56 mrness Exp $
+
+*ipp2p-0.8.2-r3 (22 May 2007)
+
+  22 May 2007; Alin Năstac <mrness@gentoo.org>
+  +files/ipp2p-0.8.2-kernel-2.6.21.patch, +ipp2p-0.8.2-r3.ebuild:
+  Fix unknown symbol error when build for 2.6.21 kernel (#179425).
 
   10 Mar 2007; Alin Năstac <mrness@gentoo.org> ipp2p-0.8.2-r2.ebuild:
   Remove $ROOT from src_compile (#168039).
