--- a/x11-plugins/enigmail/ChangeLog
+++ b/x11-plugins/enigmail/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-plugins/enigmail
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-plugins/enigmail/ChangeLog,v 1.68 2007/05/20 13:54:12 josejx Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-plugins/enigmail/ChangeLog,v 1.69 2007/05/22 17:49:05 armin76 Exp $
+
+  22 May 2007; Raúl Porcel <armin76@gentoo.org>
+  files/0.95.0-replytolist.patch:
+  Update patch to hide list-post header, thanks to Cardoe for reporting
 
   20 May 2007; Joseph Jezak <josejx@gentoo.org> enigmail-0.95.0.ebuild:
   Marked ppc stable for bug #178983.
