--- a/kde-misc/kbfx/ChangeLog
+++ b/kde-misc/kbfx/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-misc/kbfx
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-misc/kbfx/ChangeLog,v 1.16 2007/05/21 12:49:49 philantrop Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-misc/kbfx/ChangeLog,v 1.17 2007/05/22 19:01:12 philantrop Exp $
+
+  22 May 2007; Wulf C. Krueger <philantrop@gentoo.org>
+  kbfx-0.4.9.3.1-r1.ebuild:
+  Touched the ebuild because it wouldn't get updated on the rsync server.
 
   21 May 2007; Wulf C. Krueger <philantrop@gentoo.org> Manifest:
   Fixed Manifest.
