--- a/net-firewall/kmyfirewall/ChangeLog
+++ b/net-firewall/kmyfirewall/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-firewall/kmyfirewall
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-firewall/kmyfirewall/ChangeLog,v 1.32 2007/05/06 09:56:45 genone Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-firewall/kmyfirewall/ChangeLog,v 1.33 2007/05/22 19:23:57 jokey Exp $
+
+  22 May 2007; Markus Ullmann <jokey@gentoo.org>
+  kmyfirewall-1.0.1-r1.ebuild:
+  Add note for bug #165429
 
   06 May 2007; Marius Mauch <genone@gentoo.org> kmyfirewall-1.0.1-r1.ebuild:
   Replacing einfo with elog
