--- a/net-analyzer/base/ChangeLog
+++ b/net-analyzer/base/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for net-analyzer/base
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/base/ChangeLog,v 1.10 2007/05/01 17:42:04 genone Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/base/ChangeLog,v 1.11 2007/05/23 07:15:31 jokey Exp $
+
+*base-1.3.6 (23 May 2007)
+
+  23 May 2007; Markus Ullmann <jokey@gentoo.org> +base-1.3.6.ebuild:
+  Version bump wrt bug #178477
 
   01 May 2007; Marius Mauch <genone@gentoo.org> base-1.2.7-r2.ebuild:
   Replacing einfo with elog
