--- a/media-gfx/gimp-print/ChangeLog
+++ b/media-gfx/gimp-print/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-gfx/gimp-print
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/gimp-print/ChangeLog,v 1.84 2007/05/22 21:54:02 genstef Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/gimp-print/ChangeLog,v 1.85 2007/05/23 08:10:50 genstef Exp $
+
+  23 May 2007; Stefan Schweizer <genstef@gentoo.org>
+  gimp-print-5.1.1.ebuild:
+  restrict tests thanks to Paolo Pedroni <paolo.pedroni@iol.it> in bug 179486
 
   22 May 2007; Stefan Schweizer <genstef@gentoo.org>
   gimp-print-5.1.1.ebuild:
