--- a/net-im/kopete-otr/ChangeLog
+++ b/net-im/kopete-otr/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for net-im/kopete-otr
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/kopete-otr/ChangeLog,v 1.8 2007/05/04 23:24:12 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/kopete-otr/ChangeLog,v 1.9 2007/05/23 08:38:13 drizzt Exp $
+
+*kopete-otr-0.4 (23 May 2007)
+
+  23 May 2007; Timothy Redaelli <drizzt@gentoo.org> +kopete-otr-0.4.ebuild:
+  Version bump, thanks to Michael Zanetti for reporting wrt #179484.
 
   04 May 2007; Jeroen Roovers <jer@gentoo.org> kopete-otr-0.3.ebuild:
   Marked ~hppa (bug #176926).
