--- a/kde-base/kdesktop/ChangeLog
+++ b/kde-base/kdesktop/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/kdesktop
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdesktop/ChangeLog,v 1.91 2007/05/22 23:21:32 carlo Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdesktop/ChangeLog,v 1.92 2007/05/23 10:30:26 carlo Exp $
+
+  23 May 2007; Carsten Lohrke <carlo@gentoo.org> kdesktop-3.5.7.ebuild:
+  Correct dependencies.
 
 *kdesktop-3.5.7 (22 May 2007)
 
