--- a/sys-kernel/mm-sources/ChangeLog
+++ b/sys-kernel/mm-sources/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for sys-kernel/mm-sources
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/mm-sources/ChangeLog,v 1.338 2007/05/16 09:20:10 voxus Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/mm-sources/ChangeLog,v 1.339 2007/05/23 11:13:33 voxus Exp $
+
+*mm-sources-2.6.22_rc2-r1 (23 May 2007)
+
+  23 May 2007; Konstantin V. Arkhipov <voxus@gentoo.org>
+  +mm-sources-2.6.22_rc2-r1.ebuild:
+  Version bump.
 
 *mm-sources-2.6.22_rc1-r1 (16 May 2007)
 
