--- a/kde-base/kaudiocreator/ChangeLog
+++ b/kde-base/kaudiocreator/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/kaudiocreator
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kaudiocreator/ChangeLog,v 1.69 2007/05/22 21:19:50 carlo Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kaudiocreator/ChangeLog,v 1.70 2007/05/23 11:23:00 carlo Exp $
+
+  23 May 2007; Carsten Lohrke <carlo@gentoo.org> kaudiocreator-3.5.7.ebuild:
+  Pick up 3.5.6 patch.
 
 *kaudiocreator-3.5.7 (22 May 2007)
 
