--- a/kde-base/kdemultimedia-kioslaves/ChangeLog
+++ b/kde-base/kdemultimedia-kioslaves/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/kdemultimedia-kioslaves
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdemultimedia-kioslaves/ChangeLog,v 1.69 2007/05/22 23:00:03 carlo Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdemultimedia-kioslaves/ChangeLog,v 1.70 2007/05/23 11:20:39 carlo Exp $
+
+  23 May 2007; Carsten Lohrke <carlo@gentoo.org>
+  kdemultimedia-kioslaves-3.5.7.ebuild:
+  Pick up 3.5.6 patch.
 
 *kdemultimedia-kioslaves-3.5.7 (22 May 2007)
 
