--- a/kde-base/kdejava/ChangeLog
+++ b/kde-base/kdejava/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/kdejava
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdejava/ChangeLog,v 1.56 2007/05/22 22:50:30 carlo Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdejava/ChangeLog,v 1.57 2007/05/23 11:52:43 carlo Exp $
+
+  23 May 2007; Carsten Lohrke <carlo@gentoo.org> kdejava-3.5.7.ebuild:
+  Correct dependencies.
 
 *kdejava-3.5.7 (22 May 2007)
 
