--- a/kde-base/kate-plugins/ChangeLog
+++ b/kde-base/kate-plugins/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/kate-plugins
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kate-plugins/ChangeLog,v 1.65 2007/05/22 21:17:27 carlo Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kate-plugins/ChangeLog,v 1.66 2007/05/23 12:07:23 carlo Exp $
+
+  23 May 2007; Carsten Lohrke <carlo@gentoo.org> kate-plugins-3.5.7.ebuild:
+  Correct dependencies.
 
 *kate-plugins-3.5.7 (22 May 2007)
 
