--- a/kde-base/konqueror-akregator/ChangeLog
+++ b/kde-base/konqueror-akregator/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/konqueror-akregator
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/konqueror-akregator/ChangeLog,v 1.62 2007/05/23 00:45:21 carlo Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/konqueror-akregator/ChangeLog,v 1.63 2007/05/23 12:04:45 carlo Exp $
+
+  23 May 2007; Carsten Lohrke <carlo@gentoo.org>
+  konqueror-akregator-3.5.7.ebuild:
+  Correct dependencies.
 
 *konqueror-akregator-3.5.7 (23 May 2007)
 
