--- a/dev-util/git/ChangeLog
+++ b/dev-util/git/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-util/git
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/git/ChangeLog,v 1.196 2007/05/23 12:46:45 gustavoz Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/git/ChangeLog,v 1.197 2007/05/23 12:54:14 ferdy Exp $
+
+  23 May 2007; Fernando J. Pereda <ferdy@gentoo.org> git-1.5.1.6.ebuild:
+  Stable on alpha as per bug #179245
 
   23 May 2007; Gustavo Zacarias <gustavoz@gentoo.org> git-1.5.1.6.ebuild:
   Stable on sparc wrt #179245
