--- a/app-admin/rmake/ChangeLog
+++ b/app-admin/rmake/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for app-admin/rmake
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/rmake/ChangeLog,v 1.12 2007/05/13 08:08:11 bangert Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/rmake/ChangeLog,v 1.13 2007/05/23 14:49:26 smithj Exp $
+
+*rmake-1.0.9 (23 May 2007)
+
+  23 May 2007; <smithj@gentoo.org> -rmake-1.0.6.ebuild, +rmake-1.0.9.ebuild:
+  version bump
 
   13 May 2007; Thilo Bangert <bangert@gentoo.org> metadata.xml:
   add herd
