--- a/net-libs/xulrunner/ChangeLog
+++ b/net-libs/xulrunner/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-libs/xulrunner
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/xulrunner/ChangeLog,v 1.25 2007/05/18 14:53:23 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/xulrunner/ChangeLog,v 1.26 2007/05/23 15:06:39 gustavoz Exp $
+
+  23 May 2007; Gustavo Zacarias <gustavoz@gentoo.org>
+  xulrunner-1.8.1.3.ebuild:
+  Stable on sparc
 
   18 May 2007; Raúl Porcel <armin76@gentoo.org> xulrunner-1.8.1.3.ebuild:
   Add ~alpha wrt #172559
