--- a/app-office/abiword-plugins/ChangeLog
+++ b/app-office/abiword-plugins/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-office/abiword-plugins
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/abiword-plugins/ChangeLog,v 1.28 2007/05/06 04:53:38 dertobi123 Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-office/abiword-plugins/ChangeLog,v 1.29 2007/05/23 15:35:48 jer Exp $
+
+  23 May 2007; Jeroen Roovers <jer@gentoo.org> abiword-plugins-2.4.6.ebuild:
+  Stable for HPPA too.
 
   06 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
   abiword-plugins-2.4.6.ebuild:
