--- a/x11-themes/jimmac-xcursors/ChangeLog
+++ b/x11-themes/jimmac-xcursors/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-themes/jimmac-xcursors
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-themes/jimmac-xcursors/ChangeLog,v 1.12 2007/05/15 14:27:20 bangert Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-themes/jimmac-xcursors/ChangeLog,v 1.13 2007/05/23 15:39:18 gustavoz Exp $
+
+  23 May 2007; Gustavo Zacarias <gustavoz@gentoo.org>
+  jimmac-xcursors-0.0.1.ebuild:
+  Keyworded ~sparc
 
   15 May 2007; Thilo Bangert <bangert@gentoo.org> metadata.xml:
   add <herd>no-herd</herd>
