--- a/dev-php4/pecl-fileinfo/ChangeLog
+++ b/dev-php4/pecl-fileinfo/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-php4/pecl-fileinfo
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-php4/pecl-fileinfo/ChangeLog,v 1.15 2007/05/21 15:59:57 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-php4/pecl-fileinfo/ChangeLog,v 1.16 2007/05/23 20:38:24 gustavoz Exp $
+
+  23 May 2007; Gustavo Zacarias <gustavoz@gentoo.org>
+  pecl-fileinfo-1.0.4.ebuild:
+  Stable on sparc
 
   21 May 2007; Jeroen Roovers <jer@gentoo.org> pecl-fileinfo-1.0.4.ebuild:
   Stable for HPPA (bug #176542).
