--- a/dev-php4/pecl-zip/ChangeLog
+++ b/dev-php4/pecl-zip/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-php4/pecl-zip
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-php4/pecl-zip/ChangeLog,v 1.31 2007/03/20 14:21:15 gustavoz Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-php4/pecl-zip/ChangeLog,v 1.32 2007/05/23 20:37:05 gustavoz Exp $
+
+  23 May 2007; Gustavo Zacarias <gustavoz@gentoo.org> pecl-zip-1.8.8.ebuild:
+  Stable on sparc
 
   20 Mar 2007; Gustavo Zacarias <gustavoz@gentoo.org> pecl-zip-1.0.ebuild:
   Unkeyworded sparc wrt security #171441
