--- a/media-libs/libkdcraw/ChangeLog
+++ b/media-libs/libkdcraw/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/libkdcraw
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libkdcraw/ChangeLog,v 1.2 2007/05/22 15:35:25 gustavoz Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libkdcraw/ChangeLog,v 1.3 2007/05/23 20:48:22 armin76 Exp $
+
+  23 May 2007; Raúl Porcel <armin76@gentoo.org> libkdcraw-0.1.0.ebuild:
+  Add ~alpha/~ia64 wrt #179410
 
   22 May 2007; Gustavo Zacarias <gustavoz@gentoo.org>
   libkdcraw-0.1.0.ebuild:
