--- a/net-www/apache/ChangeLog
+++ b/net-www/apache/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-www/apache
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-www/apache/ChangeLog,v 1.525 2007/05/22 20:52:35 hollow Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-www/apache/ChangeLog,v 1.526 2007/05/23 21:26:16 chtekk Exp $
+
+  23 May 2007; Luca Longinotti <chtekk@gentoo.org> -apache-2.2.4.ebuild,
+  -apache-2.2.4-r1.ebuild, apache-2.2.4-r2.ebuild:
+  Cleanup outdated ebuilds. Readd libcap dep for mpm-itk on 2.2.
 
 *apache-2.2.4-r2 (22 May 2007)
 
