--- a/net-wireless/ipw2200-firmware/ChangeLog
+++ b/net-wireless/ipw2200-firmware/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-wireless/ipw2200-firmware
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-wireless/ipw2200-firmware/ChangeLog,v 1.13 2007/01/15 13:07:53 phreak Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-wireless/ipw2200-firmware/ChangeLog,v 1.14 2007/05/24 09:05:31 uberlord Exp $
+
+  24 May 2007; Roy Marples <uberlord@gentoo.org>
+  ipw2200-firmware-2.4.ebuild, ipw2200-firmware-3.0.ebuild:
+  We should not RDEPEND on sources nor DEPEND on runtime only stuff
 
   15 Jan 2007; Christian Heim <phreak@gentoo.org>
   ipw2200-firmware-2.2.ebuild, ipw2200-firmware-2.3.ebuild,
