--- a/kde-base/artsplugin-audiofile/ChangeLog
+++ b/kde-base/artsplugin-audiofile/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/artsplugin-audiofile
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/artsplugin-audiofile/ChangeLog,v 1.50 2007/02/04 01:34:38 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/artsplugin-audiofile/ChangeLog,v 1.51 2007/05/24 11:03:21 carlo Exp $
+
+  24 May 2007; Carsten Lohrke <carlo@gentoo.org>
+  artsplugin-audiofile-3.5.4.ebuild:
+  Adjust MAXKDEVER
 
   04 Feb 2007; Diego Pettenò <flameeyes@gentoo.org>
   -artsplugin-audiofile-3.5.0.ebuild:
