--- a/kde-misc/kdnssd-avahi/ChangeLog
+++ b/kde-misc/kdnssd-avahi/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for kde-misc/kdnssd-avahi
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-misc/kdnssd-avahi/ChangeLog,v 1.17 2007/04/30 20:27:16 carlo Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-misc/kdnssd-avahi/ChangeLog,v 1.18 2007/05/24 13:13:14 flameeyes Exp $
+
+  24 May 2007; Diego Pettenò <flameeyes@gentoo.org>
+  kdnssd-avahi-0.1.2.ebuild:
+  Check also for dbus useflag on avahi, as without that avahi-client is not
+  built, and kdnssd-avahi will fail at configure for missing prerequisites.
 
   30 Apr 2007; Carsten Lohrke <carlo@gentoo.org> kdnssd-avahi-0.1.2.ebuild:
   Fix thinko.
