--- a/dev-ruby/sqlite3-ruby/ChangeLog
+++ b/dev-ruby/sqlite3-ruby/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-ruby/sqlite3-ruby
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/sqlite3-ruby/ChangeLog,v 1.18 2007/05/19 08:51:56 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/sqlite3-ruby/ChangeLog,v 1.19 2007/05/24 14:05:35 flameeyes Exp $
+
+  24 May 2007; Diego Pettenò <flameeyes@gentoo.org>
+  sqlite3-ruby-1.2.1.ebuild:
+  Add ~x86-fbsd keyword, as per bug #168110.
 
   19 May 2007; Markus Rothe <corsair@gentoo.org> sqlite3-ruby-1.2.1.ebuild:
   Added ~ppc64; bug #176308
