--- a/net-wireless/bluez-libs/ChangeLog
+++ b/net-wireless/bluez-libs/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-wireless/bluez-libs
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-wireless/bluez-libs/ChangeLog,v 1.83 2007/05/12 15:10:48 betelgeuse Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-wireless/bluez-libs/ChangeLog,v 1.84 2007/05/24 16:32:48 betelgeuse Exp $
+
+*bluez-libs-3.11 (24 May 2007)
+
+  24 May 2007; Petteri Räty <betelgeuse@gentoo.org>
+  +bluez-libs-3.11.ebuild:
+  Version bump.
 
   12 May 2007; Petteri Räty <betelgeuse@gentoo.org> ChangeLog:
   Sign Manifest.
