--- a/dev-php4/pecl-fileinfo/ChangeLog
+++ b/dev-php4/pecl-fileinfo/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-php4/pecl-fileinfo
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-php4/pecl-fileinfo/ChangeLog,v 1.16 2007/05/23 20:38:24 gustavoz Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-php4/pecl-fileinfo/ChangeLog,v 1.17 2007/05/24 19:38:14 opfer Exp $
+
+  24 May 2007; Christian Faulhammer <opfer@gentoo.org>
+  pecl-fileinfo-1.0.4.ebuild:
+  x86/amd64 stable, bug 176542
 
   23 May 2007; Gustavo Zacarias <gustavoz@gentoo.org>
   pecl-fileinfo-1.0.4.ebuild:
