--- a/dev-php5/pecl-fileinfo/ChangeLog
+++ b/dev-php5/pecl-fileinfo/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-php5/pecl-fileinfo
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-php5/pecl-fileinfo/ChangeLog,v 1.17 2007/05/21 16:00:02 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-php5/pecl-fileinfo/ChangeLog,v 1.18 2007/05/24 19:42:41 opfer Exp $
+
+  24 May 2007; Christian Faulhammer <opfer@gentoo.org>
+  pecl-fileinfo-1.0.4.ebuild:
+  x86/amd64 stable, bug 176542
 
   21 May 2007; Jeroen Roovers <jer@gentoo.org> pecl-fileinfo-1.0.4.ebuild:
   Stable for HPPA (bug #176542).
