--- a/xfce-extra/xfce4-icon-theme/ChangeLog
+++ b/xfce-extra/xfce4-icon-theme/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for xfce-extra/xfce4-icon-theme
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-icon-theme/ChangeLog,v 1.54 2007/05/21 17:52:35 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-icon-theme/ChangeLog,v 1.55 2007/05/24 20:12:36 pylon Exp $
+
+  24 May 2007; Lars Weiler <pylon@gentoo.org> xfce4-icon-theme-4.4.1.ebuild:
+  Stable on ppc; bug #178510.
 
   21 May 2007; Jeroen Roovers <jer@gentoo.org>
   xfce4-icon-theme-4.4.1.ebuild:
