--- a/dev-java/sun-j2ee/ChangeLog
+++ b/dev-java/sun-j2ee/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-java/sun-j2ee
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/sun-j2ee/ChangeLog,v 1.26 2007/04/06 09:15:58 opfer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/sun-j2ee/ChangeLog,v 1.27 2007/05/24 20:30:34 betelgeuse Exp $
+
+  24 May 2007; Petteri Räty <betelgeuse@gentoo.org>
+  -sun-j2ee-1.3.1-r2.ebuild, -sun-j2ee-1.3.1-r3.ebuild:
+  Remove old generation 1 ebuilds.
 
   06 Apr 2007; Christian Faulhammer <opfer@gentoo.org>
   sun-j2ee-1.3.1-r4.ebuild:
@@ -84,9 +88,9 @@
   16 Mar 2003; Dylan Carlson <absinthe@gentoo.org> sun-j2ee-1.3.1-r1.ebuild:
   Added lib-compat dep to close bug # 14710.  Set 'doc' use flag for API docs.
 
-*sun-j2ee-1.3.1 (19 August 2002)
+*sun-j2ee-1.3.1 (19 Aug 2002)
 
-  19 August 2002; Sascha Schwabbauer <cybersystem@gentoo.org> ChangeLog,
+  19 Aug 2002; Sascha Schwabbauer <cybersystem@gentoo.org> ChangeLog,
   sun-j2ee-1.3.1.ebuild :
   Added -ppc to the keywords.
 
