--- a/dev-java/crimson/ChangeLog
+++ b/dev-java/crimson/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-java/crimson
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/crimson/ChangeLog,v 1.19 2007/05/03 14:33:49 caster Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/crimson/ChangeLog,v 1.20 2007/05/27 10:17:10 betelgeuse Exp $
+
+  27 May 2007; Petteri Räty <betelgeuse@gentoo.org> -crimson-1.1.3.ebuild:
+  Remove generation 1 ebuild.
 
   03 May 2007; Vlastimil Babka <caster@gentoo.org> ChangeLog:
   Gen-1 punt.
