--- a/dev-java/cryptix/ChangeLog
+++ b/dev-java/cryptix/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-java/cryptix
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/cryptix/ChangeLog,v 1.7 2007/03/18 14:34:46 betelgeuse Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/cryptix/ChangeLog,v 1.8 2007/05/27 10:22:47 betelgeuse Exp $
+
+  27 May 2007; Petteri Räty <betelgeuse@gentoo.org>
+  cryptix-3.2.0-r1.ebuild:
+  Style cleanup.
 
   17 Mar 2007; Petteri Räty <betelgeuse@gentoo.org>
   cryptix-3.2.0-r1.ebuild:
