--- a/net-www/apache/ChangeLog
+++ b/net-www/apache/ChangeLog
@@ -1,6 +1,14 @@
 # ChangeLog for net-www/apache
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-www/apache/ChangeLog,v 1.528 2007/05/26 19:44:09 phreak Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-www/apache/ChangeLog,v 1.529 2007/05/27 16:15:54 phreak Exp $
+
+*apache-2.2.4-r4 (27 May 2007)
+
+  27 May 2007; Christian Heim <phreak@gentoo.org> -apache-2.2.4-r3.ebuild,
+  +apache-2.2.4-r4.ebuild:
+  Fixing the installation of apxs(2), reported in bug #177697 and bug #180006.
+  I'm really sorry for this, I kinda forgot to add apxs to the PROGRAMS
+  definition in support/Makefile.in when rewriting it.
 
   26 May 2007; Christian Heim <phreak@gentoo.org> apache-2.2.4-r3.ebuild:
   Restrict to primaryuri for now, as the patchtarball on the mirrors is broken.
