--- a/net-wireless/ipw3945d/ChangeLog
+++ b/net-wireless/ipw3945d/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-wireless/ipw3945d
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-wireless/ipw3945d/ChangeLog,v 1.16 2007/04/16 14:47:05 phreak Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-wireless/ipw3945d/ChangeLog,v 1.17 2007/05/27 16:34:37 phreak Exp $
+
+  27 May 2007; Christian Heim <phreak@gentoo.org> ipw3945d-1.7.22-r4.ebuild:
+  We don't need use RESTRICT=stricter, RESTRICT=strip should be enough.
 
   16 Apr 2007; Christian Heim <phreak@gentoo.org> ipw3945d-1.7.22-r4.ebuild:
   Calling modules-update has been deprecated w/
