--- a/kde-base/dcoppython/ChangeLog
+++ b/kde-base/dcoppython/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/dcoppython
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/dcoppython/ChangeLog,v 1.53 2007/05/22 20:56:14 carlo Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/dcoppython/ChangeLog,v 1.54 2007/05/27 17:00:37 cryos Exp $
+
+  27 May 2007; Marcus D. Hanwell <cryos@gentoo.org> dcoppython-3.5.7.ebuild:
+  Remove patch, no longer needed. Closes bug 179969.
 
 *dcoppython-3.5.7 (22 May 2007)
 
