--- a/dev-ruby/ruby-bdb/ChangeLog
+++ b/dev-ruby/ruby-bdb/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/ruby-bdb
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-bdb/ChangeLog,v 1.20 2007/04/17 17:51:46 gustavoz Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-bdb/ChangeLog,v 1.21 2007/05/27 18:55:22 nixnut Exp $
+
+  27 May 2007; nixnut <nixnut@gentoo.org> ruby-bdb-0.6.0.ebuild:
+  Stable on ppc wrt bug 174529
 
   17 Apr 2007; Gustavo Zacarias <gustavoz@gentoo.org> ruby-bdb-0.6.0.ebuild:
   Stable on sparc wrt #174529
